[package]
name = "chip8_rust"
version = "0.1.0"
authors = ["Jan <jancmalle@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand =  "0.8.0"
lazy_static = "1.4.0"


[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf","image","mixer"]
